--- a/app.json
+++ b/app.json
@@ -29,6 +29,9 @@
         "plugins": ["expo-router"],
         "experiments": {
             "typedRoutes": true
+        },
+        "packagerOpts": {
+            "hostType": "lan"
         }
     }
 }
